client check at the request level + tested + one variable

--- a/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest.csproj
+++ b/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest/OptimizelyFeatureRolloutTest.csproj
@@ -16,7 +16,7 @@
     <AssemblyName>OptimizelyFeatureRolloutTest</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -207,7 +207,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50479</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50479/</IISUrl>
+          <IISUrl>http://local.rollout-test.com/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
